--- a/WoodCutterCalculator.csproj
+++ b/WoodCutterCalculator.csproj
@@ -80,10 +80,11 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Models\CollectionDataValue.cs" />
+    <Compile Include="Models\Extensions\ArrayExtensions.cs" />
     <Compile Include="Models\GeneticAlgorithm\GeneticAlgorithmParameters.cs" />
     <Compile Include="Models\GeneticAlgorithm\SpecimenPopulation.cs" />
     <Compile Include="Models\Matlab\MatlabClient.cs" />
-    <Compile Include="Models\Order.cs" />
+    <Compile Include="Models\Order\Order.cs" />
     <Compile Include="Models\OrderProcessor.cs" />
     <Compile Include="Models\Order\DetailsOfPlanks.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
