--- a/packages.config
+++ b/packages.config
@@ -6,4 +6,5 @@
   <package id="OxyPlot.Core" version="2014.1.546" targetFramework="net461" />
   <package id="OxyPlot.Wpf" version="2011.3.4094" targetFramework="net461" />
   <package id="oxyplot-extensions" version="1.0.13" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
