--- a/WoodCutterCalculator.csproj
+++ b/WoodCutterCalculator.csproj
@@ -92,7 +92,8 @@
     <Compile Include="Models\Order\Order.cs" />
     <Compile Include="Models\OrderProcessor.cs" />
     <Compile Include="Models\Order\DetailsOfPlanks.cs" />
-    <Compile Include="Models\StockWarehouse.cs" />
+    <Compile Include="Models\StockWarehouse\StockWarehouse.cs" />
+    <Compile Include="Models\StockWarehouse\StockWarehouseProcessor.cs" />
     <Compile Include="Models\Utils\DescendingComparer.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\MenuViewModel.cs" />
