--- a/packages.config
+++ b/packages.config
@@ -1,10 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="2.0.2" targetFramework="net461" />
+  <package id="DnsClient" version="1.0.7" targetFramework="net461" />
+  <package id="MongoDB.Bson" version="2.7.0" targetFramework="net461" />
+  <package id="MongoDB.Driver" version="2.7.0" targetFramework="net461" />
+  <package id="MongoDB.Driver.Core" version="2.7.0" targetFramework="net461" />
   <package id="MvvmLight" version="5.4.1.1" targetFramework="net461" />
   <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net461" />
   <package id="OxyPlot.Core" version="2014.1.546" targetFramework="net461" />
   <package id="OxyPlot.Wpf" version="2011.3.4094" targetFramework="net461" />
   <package id="oxyplot-extensions" version="1.0.13" targetFramework="net461" />
+  <package id="System.Buffers" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
