--- a/WoodCutterCalculator.csproj
+++ b/WoodCutterCalculator.csproj
@@ -101,12 +101,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Models\Enums\IterationsEnum.cs" />
     <Compile Include="Models\Extensions\EnumerableExtensions.cs" />
     <Compile Include="Models\Extensions\EnumerationExtensions.cs" />
     <Compile Include="Models\PlotDatas\AlgorithmParameters.cs" />
     <Compile Include="Models\PlotDatas\AllPlotDatas.cs" />
     <Compile Include="Models\PlotDatas\HistogramData.cs" />
     <Compile Include="Models\PlotDatas\HistoryOfLearningPlot.cs" />
+    <Compile Include="Models\PlotDatas\PicturedDatas.cs" />
     <Compile Include="Models\Plotter\CollectionDataValue.cs" />
     <Compile Include="Models\Enums\StockClassEnum.cs" />
     <Compile Include="Models\Enums\StockDetailsEnum.cs" />
@@ -119,23 +121,27 @@
     <Compile Include="Models\Mongo\MongoDBManager.cs" />
     <Compile Include="Models\Mongo\MongoSettings.cs" />
     <Compile Include="Models\Managers\SettingsManager.cs" />
-    <Compile Include="Models\Order\Order.cs" />
     <Compile Include="Models\OrderProcessor.cs" />
     <Compile Include="Models\Order\DetailsOfPlanks.cs" />
     <Compile Include="Models\Planks\PlanksToCut.cs" />
+    <Compile Include="Models\Plotter\CuttedStockPictureCreator.cs" />
     <Compile Include="Models\Plotter\HistogramDataValues.cs" />
     <Compile Include="Models\Plotter\HistogramPlotter.cs" />
     <Compile Include="Models\Plotter\Plotter.cs" />
+    <Compile Include="Models\Stock\MinorElementOfStock.cs" />
+    <Compile Include="Models\Stock\StocksToPicture.cs" />
     <Compile Include="Models\Stock\StockWarehouse.cs" />
     <Compile Include="Models\Stock\StockWarehouseProcessor.cs" />
     <Compile Include="Models\Utils\DescendingComparer.cs" />
     <Compile Include="Models\Utils\FitnessUtils.cs" />
+    <Compile Include="Models\Utils\MathUtils.cs" />
     <Compile Include="Models\Utils\StockDescriptionUtils.cs" />
+    <Compile Include="Models\Utils\TimeUtils.cs" />
     <Compile Include="Repositories\AllPlotDatasRepository.cs" />
     <Compile Include="Repositories\IAllPlotDatasRepository.cs" />
     <Compile Include="Repositories\IPlanksToCutRepository.cs" />
     <Compile Include="Repositories\PlanksToCutRepository.cs" />
-    <Compile Include="ViewModels\HistoryPanelViewModel.cs" />
+    <Compile Include="ViewModels\CuttedStocksViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\MenuViewModel.cs" />
     <Compile Include="ViewModels\PlotsViewModel.cs" />
@@ -144,6 +150,9 @@
     <Compile Include="ViewModels\Helpers\IFrameNavigationService.cs" />
     <Compile Include="Views\Menu.xaml.cs">
       <DependentUpon>Menu.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\CuttedStocks.xaml.cs">
+      <DependentUpon>CuttedStocks.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\Plots.xaml.cs">
       <DependentUpon>Plots.xaml</DependentUpon>
@@ -163,6 +172,10 @@
     <Page Include="Views\Menu.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\CuttedStocks.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Views\Plots.xaml">
       <SubType>Designer</SubType>
@@ -197,7 +210,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <COMReference Include="MLApp">
@@ -210,6 +225,10 @@
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </COMReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Views\images\Iclass.bmp" />
+    <Resource Include="Views\images\IIclass.bmp" />
+    <Resource Include="Views\images\IIIclass.bmp" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
